--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nick Gowler - Student Portfolio Auto Deploy</title>
+    <title>Nick Gowler - Student Portfolio</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -31,7 +31,7 @@
     <!-- Hero Section -->
     <section id="hero" class="text-center text-white d-flex align-items-center">
         <div class="container">
-            <h1>Welcome to My Portfolio Auto Deploy</h1>
+            <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Nick Gowler, a passionate student exploring tech and innovation.</p>
             <a href="#about" class="btn btn-primary">Learn More</a>
         </div>
